--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+/* html {
+  scroll-behavior: smooth;
+} */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
@@ -17,14 +20,22 @@
   font-weight: 300;
   src: url(../assets/fonts/Roboto-Light.ttf);
 }
-
+@media (max-width: 767px) {
+  .navbar-collapse
+    {
+      background-color:rgb(131,96,241);
+    }
+}
 .first:hover{
   background-color: rgb(241, 229, 232);
   color:white;
   transition: 1s;
 
 }
+.nav.scrolled{
+background-color: orangered;
 
+}
 body{
   font-family: "Roboto", sans-serif;
   line-height: 1.8;
@@ -39,6 +50,7 @@ body{
 
 ul li{
   list-style-type: none;
+  margin-top: 10px;
 }
 
 ul{
@@ -81,6 +93,7 @@ html,body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden; 
+  scroll-behavior: smooth;
 }
 
 .header--bg{
@@ -152,12 +165,13 @@ html,body {
 }
 
 .navbar{
-  padding-top:30px;
+  margin-right: 20px;
+  height: 80px;
 }
-
-/* .navbar-nav {
-  margin-right: 15px;
-} */
+.navbar-toggle { 
+  border: none !important;
+  margin-top: 30px;
+ }
 
 .navbar-toggle{
   background-color: #ddd;
@@ -168,9 +182,8 @@ html,body {
 }
 
 .navbar-brand{
-  padding-left: 20px;
-  margin-top: -34px;
-
+  /* padding-left: 20px;  */
+   margin-top: -10px;
 }
 
 @media (min-width: 768px) {
@@ -332,7 +345,7 @@ html,body {
   color: #fff;
 }
 
-.skill--bg{
+/*.skill--bg{
   /* background: url("../assets/images/skill-background.png") no-repeat; */
   background-size: cover;
   position: relative;
@@ -346,8 +359,11 @@ html,body {
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgba(41, 108, 231, 0.801);
+  background-color: rgba(23, 158, 113, 0.801);
   z-index: -1;
+}
+#skill{
+  background-color:rgb(124,92,226);
 }
 
 .skill__container--narrow{
@@ -932,7 +948,7 @@ html,body {
 }
 
 .footer--bg{
-  background-color: #27353B;
+  background-color: rgb(127,94,231);
 }
 
 .footer__title{
@@ -949,7 +965,7 @@ html,body {
 
 .footer__contact-information li a{
   font-size: 15px;
-  color: #9ca1a3;
+  color: white;
   padding-right: 30px;
   padding-left: 30px;
   padding-bottom: 10px;
