--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   left: 0;
   top: 0;
   width: 100%;
+  height: 100%;
   z-index: 0;
 }
 .my-content{
@@ -132,10 +133,10 @@ html,body {
   z-index: -1;
 }
 
-.header__content{
-  /* padding-top: 100px; */
-  /* padding-bottom: 140px; */
-}
+/* .header__content{
+  padding-top: 100px;
+  padding-bottom: 140px;
+}  */
 
 .header__content__block{
   font-size: 50px;
@@ -163,11 +164,11 @@ html,body {
 
 .header__button{
   padding: 11px 30px;
-  background-color: #fff;
+  background-color:  #7f56fd;
   border-radius: 30px;
   display: inline-block;
   font-size: 15px;
-  color: #7f56fd;
+  color:white;
   font-family: Roboto-Light;
   font-weight: bold;
   margin-top: 30px;
@@ -222,7 +223,8 @@ html,body {
 }
 
 .social-icon{
-  margin-bottom: 60px;
+  margin-bottom: 120px;
+ 
 }
 
 .social-icon ul li{
@@ -966,12 +968,12 @@ html,body {
 }
 
 .footer--bg{
-  background-color: rgb(127,94,231);
+  background-color: rgb(255, 255, 255);
 }
 
 .footer__title{
   font-size: 30px;
-  color: #fff;
+  color: #000;
   font-family: Roboto-Light;
   font-weight: bold;
   margin-bottom: 40px;
@@ -983,7 +985,7 @@ html,body {
 
 .footer__contact-information li a{
   font-size: 15px;
-  color: white;
+  color: black;
   padding-right: 30px;
   padding-left: 30px;
   padding-bottom: 10px;
@@ -1007,6 +1009,6 @@ html,body {
 
 .footer__paragraph{
   font-size: 14px;
-  color: #fff;
+  color:black;
   font-family: Roboto-Light;
 }
